committing site overhaul feb2015

--- a/index.html
+++ b/index.html
@@ -1,63 +1,168 @@
 <!doctype html>
-<html class="no-js" lang="en">
-<head>
-	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
-<!doctype html>
 <head>
   <meta charset="utf-8">
-  <title>Lisa W. Crawford Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+  <title>Lisa W. Crawford</title>
   <link rel="stylesheet" href="style.css">
-  <link href='http://fonts.googleapis.com/css?family=Italiana' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,700|Berkshire+Swash' rel='stylesheet' type='text/css'>
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-<div id="container">
-<div id="header">
 
+<div id="wrapper">
+	<div id="topnav">
+ 		<ul class="navigation">
+  			<li><a href='#about'>About</a></li>
+  			<li><a href='#work'>Work</a></li>
+ 			<li><a href='#contact'>Contact</a></li></ul>
+	</div> <!-- topnav -->
 
-<h1><a href='index.html'>Lisa Crawford</a></h1>
+<section id='hello'>
+	<div class='column-thin'>
+		<div id="lisaimg"><img src="http://i306.photobucket.com/albums/nn258/lwcstyling/Lisa-on-Swing.jpg" alt="Lisa's Photo">
+		</div>
+	</div>
+	<div class='column-fat'>
+		<div id='greeting'>
+		<h3>Hello, I'm</h3>
+		<h1>Lisa Crawford.</h1>
+			<h3>I love to build things.</h3>
+			<p>Whether it's a website, a new frock, or even a giant snowball made of trash bags and chicken wire (true story), creating something from nothing gives me a rush.</p>
+			<p>When I'm not building the internet with my bare hands, you can find me trimming my bangs with craft scissors or making an obscure Monty Python reference.</p>
+			<h2><a href=#contact>What can I build for <span id='you'>you</span>?</a></h2>
+		</div> <!-- greeting -->
+	</div>
+</section> <!-- hello -->
 
- <ul class="navigation">
-  <li><a href='work.html'>Work</a></li>
-  <li><a href='contact.html'>Contact</a></li></ul>
-  </div>
-  
-<!-- Main page -->
-<div id="body">
-<section class='about'>
+<section id='about'>
+	<div class='column-fat'>
+		<div id='about-text'>
+		<h2>About</h2>
+		<h4>Designer.  Developer.  Green Smoothie Enthusiast.  Cookie Monster.</h4>
+		<p>I built my first website 15 years ago in my high school computer class.  After years as a merchandiser and display designer, I've rediscovered my inner code geek.  Luckily for you, my style has evolved past the Comic Sans font & tiled image backgrounds of my youth!</p>
+		<p>I LOVE building websites or Wordpress themes for individuals & small businesses.  I also love sewing, kale, tacos, and baking the best chocolate chip cookies you will ever eat.</p>
+		<h3>Have a project for me?  Let's build it together!</h3>
+		<h3 id='contact-about'><a href='mailto:lisawcrawford@gmail.com'>>> Contact me</a></h3>
+		</div> <!-- about-text -->
+	</div>
+	<div class='column-thin'>
+		<div id='quote-box'>
+		<p id='quote-main1'>"I have no special talents.  I am only passionately curious."</p>
+		<p id='quote-by'>-Albert Einstein</p>
+		<p id='quote-main2'>"I’m sorry to have kept you waiting, but I’m afraid my walk has become rather sillier recently.'</p>
+		<p id='quote-by'>-John Cleese, Monty Python</p>
+		</div> <!-- quote-box -->
+	</div>
+</section> <!-- about -->
 
-<!-- Image here   -->
-<div id="lisaimg"><img src="http://i306.photobucket.com/albums/nn258/lwcstyling/LisaPhoto_1.png" alt="Lisa Photo">
-</div>
+<section id='work'>
+	<div id='work-info'>
+		<h2>Recent Work</h2>
+<!-- 		<p>You can also download my resume HERE.</p> -->
+	</div>
 
-<div id='lisabio'>
-<h3>Hi, I'm Lisa.</h3>
-<p>I'm a designer and front-end developer based in Austin, Texas.</p>
-<p><span id='build'>I love to build things.</span>  Whether it's a website, a new frock, or even a giant snowball made of trash bags and chicken wire (true story), creating something from nothing gives me a rush.</p>
-<p>When I'm not building the internet with my bare hands (or is it Bear Hands?), you can find me trimming my bangs with craft scissors or making an obscure Monty Python reference.</p>
-<h2><a href='contact.html'>What can I build for <span id='you'>you</span>?</a></h2>
-</div>
+	<div class="site-links">
+	<div id='cambrian-link' class='flex'><a href="http://cambrianenv.com" target="_blank"><img src="http://i306.photobucket.com/albums/nn258/lwcstyling/camb-mar15.png" alt="Cambrian Environmental"/></a>
+		<p id="caption-one">Company website for local consulting firm.</p></div>
+	<div id='hmm-link' class='flex'><a href="http://www.hotmessmamas.com" target="_blank"><img src="http://i306.photobucket.com/albums/nn258/lwcstyling/hmm-dec14.png" alt="Hot Mess Mamas"/></a>
+		<p id="caption-two">Customized WordPress theme for collaborative personal blog.</p></div>
+	<div id='orig-link' class='flex'><a href="originalsite.html" target="_blank"><img src="http://i306.photobucket.com/albums/nn258/lwcstyling/lwcorig-sept14.png" alt="Original Website"/></a>
+		<p id="caption-three">Original personal site.</p></div>
+	</div>
+</section> <!-- work -->
 
+<section id='contact'>
+	<div class='column-fat'>
+		<div id='contact-text'>
+		<h2>Contact</h2>
+		<h4>Thanks for visiting.  Let's keep in touch!</h4>
+		<h3><a href='mailto:lisawcrawford@gmail.com'>Email me</a></h3>
+		</div>
+	</div>
+	<div class='column-thin'>
+		<div id='fun-facts'>
+			<h2>Fun Facts</h2>
+			<p>I've traveled to 12 countries (so far) and have lived in 3 of them.<p>
+			<p>My favorite video games are Zelda: Twilight Princess, and Super Mario RPG (yep, the SNES one).</p>
+		</div>
+		<!-- 
+<div id='contact-links'>
+		<ul>
+			<li><a href='https://www.linkedin.com/profile/view?id=36082032&trk=nav_responsive_tab_profile' target="_blank"><i class="fa fa-linkedin"></i></a></li>
+			<li><a href='mailto:lisawcrawford@gmail.com'><i class="fa fa-envelope"></i></a></li>
+			<li><a href='https://github.com/lwcrawford52' target="_blank"><i class="fa fa-github-alt"></i></a></li>
+		</ul>
+		</div>
+ -->
+	</div>
+</section> <!-- contact -->
+
+<section id='footer-bar'>
+	<p>Designed & developed by Lisa W. Crawford.  Hey, that's me!</p>
 </section>
-</div>
-<!-- Footer -->
-<div id="footer">
 
-<ul>
+</div> <!-- wrapper -->
 
-<li><a href='https://www.linkedin.com/profile/view?id=36082032&trk=nav_responsive_tab_profile' target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
-<li><a href='mailto:lisawcrawford@gmail.com'><i class="fa fa-envelope fa-3x"></i></a></li>
-<li><a href='https://github.com/lwcrawford52' target="_blank"><i class="fa fa-github-alt fa-2x"></i></a></li>
-
-</ul>
-</div>
-
-</div>
 </body>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="text/javascript" href="script.js"></script>
+  <script src="https://raw.githubusercontent.com/kswedberg/jquery-smooth-scroll/master/jquery.smooth-scroll.js"></script>
+<script>
+$('ul li a').smoothScroll();
+</script>
+
+
+<script>
+var moreBio = $('#learnmore');
+moreBio.click(expandBio);
+function expandBio() {
+  var hiddenText = document.getElementById('#more-bio');
+  hiddenText.style.display = "block";}
+var hideButton = $('#hide-bio');
+hideButton.click(hideFunction);
+function hideFunction() {
+  var removeText = document.getElementById("#more-bio");
+  removeText.style.display = "none";}
+</script>
+
+<script>  
+var firstCap = document.getElementById('cambrian-link');
+firstCap.addEventListener('mouseover', showOneCap, false);
+firstCap.addEventListener('mouseout', revertOneCap, false);
+var secondCap = document.getElementById('hmm-link');
+secondCap.addEventListener('mouseover', showTwoCap, false);
+secondCap.addEventListener('mouseout', revertTwoCap, false);
+var thirdCap = document.getElementById('orig-link');
+thirdCap.addEventListener('mouseover', showThreeCap, false);
+thirdCap.addEventListener('mouseout', revertThreeCap, false);
+
+function showOneCap() {
+  var oneCap = document.getElementById('caption-one');
+  oneCap.style.visibility = 'visible';
+}
+
+function revertOneCap() {
+  var oneCap = document.getElementById('caption-one');
+  oneCap.style.visibility = 'hidden';
+}
+function showTwoCap() {
+  var oneCap = document.getElementById('caption-two');
+  oneCap.style.visibility = 'visible';
+}
+
+function revertTwoCap() {
+  var twoCap = document.getElementById('caption-two');
+  twoCap.style.visibility = 'hidden';
+}
+function showThreeCap() {
+  var threeCap = document.getElementById('caption-three');
+  threeCap.style.visibility = 'visible';
+}
+
+function revertThreeCap() {
+  var threeCap = document.getElementById('caption-three');
+  threeCap.style.visibility = 'hidden';
+}
+</script>
 </html>
